force-app/main/default/objects/DRE__DRE_Rule__c/DRE__DRE_Rule__c.object-meta.xml
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <label>DRE Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRE Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>