force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>