force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Batch_Randomize_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Randomize_Percentage__c</fullName>
    <label>Batch Randomize Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>