force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Batch_Randomize_Rounding_Method__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Randomize_Rounding_Method__c</fullName>
    <label>Batch Randomize Rounding Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEILING</fullName>
                <default>true</default>
                <label>CEILING</label>
            </value>
            <value>
                <fullName>FLOOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>