force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>