force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Batch_Threshold_Maximum__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Threshold_Maximum__c</fullName>
    <defaultValue>50000000</defaultValue>
    <description>Maximum number of records this Batch Rule can process</description>
    <inlineHelpText>Maximum number of records this Batch Rule can process</inlineHelpText>
    <label>Batch Threshold Maximum</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>