force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Batch_Threshold_Minimum__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Threshold_Minimum__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The minimum number of records that must be returned by Batch Criteria before Rule could be processed</description>
    <inlineHelpText>The minimum number of records that must be returned by Batch Criteria before Rule could be processed</inlineHelpText>
    <label>Batch Threshold Minimum</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>