force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DRE__Effective_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>