force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Event__c.field-meta.xml
<CustomField>
    <fullName>DRE__Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DRE__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Edited</fullName>
            </value>
            <value>
                <fullName>Created or Edited</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>However Impacted</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Unit Test Event A</fullName>
            </value>
            <value>
                <fullName>Unit Test Event B</fullName>
            </value>
            <value>
                <fullName>Batched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>