force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>DRE__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>