force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Order__c.field-meta.xml
<CustomField>
    <fullName>DRE__Order__c</fullName>
    <defaultValue>999</defaultValue>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>