force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Run_Once__c.field-meta.xml
<CustomField>
    <fullName>DRE__Run_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to prevent duplicate runs of the same rule</inlineHelpText>
    <label>Run Once</label>
    <type>Checkbox</type>
</CustomField>