force-app/main/default/objects/DRE__DRE_Rule__c/fields/DRE__Title__c.field-meta.xml
<CustomField>
    <fullName>DRE__Title__c</fullName>
    <formula>HYPERLINK('/' &amp; Id, Name) &amp; " - " &amp; DRE__Object_Name__c &amp; " " &amp; TEXT(DRE__Event__c) &amp; " (Type: " &amp; TEXT(DRE__Type__c) &amp; ", Order: " &amp; TEXT(DRE__Order__c) &amp; IF(DRE__Run_Once__c, ', Run Once', '') &amp; IF(DRE__IsActive__c, ', Active', ', Inactive') &amp; ")"</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>