force-app/main/default/objects/DRE__DRE_Rule__c/listViews/DRE__All.listView-meta.xml
<ListView>
    <fullName>DRE__All</fullName>
    <columns>NAME</columns>
    <columns>DRE__Object_Name__c</columns>
    <columns>DRE__Event__c</columns>
    <columns>DRE__Type__c</columns>
    <columns>DRE__IsActive__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>