force-app/main/default/objects/DRE__DRE_Rule__c/listViews/DRE__Batch_Rules.listView-meta.xml
<ListView>
    <fullName>DRE__Batch_Rules</fullName>
    <columns>NAME</columns>
    <columns>DRE__Object_Name__c</columns>
    <columns>DRE__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DRE__Type__c</field>
        <operation>equals</operation>
        <value>Batch</value>
    </filters>
    <label>Batch Rules</label>
</ListView>