force-app/main/default/objects/DRE__DRE_Rule__c/listViews/DRE__Display_Rules.listView-meta.xml
<ListView>
    <fullName>DRE__Display_Rules</fullName>
    <columns>NAME</columns>
    <columns>DRE__Object_Name__c</columns>
    <columns>DRE__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DRE__Type__c</field>
        <operation>equals</operation>
        <value>Display</value>
    </filters>
    <label>Display Rules</label>
</ListView>