force-app/main/default/objects/DRE__DRE_Rule__c/listViews/DRE__Validation_Rules.listView-meta.xml
<ListView>
    <fullName>DRE__Validation_Rules</fullName>
    <columns>NAME</columns>
    <columns>DRE__Object_Name__c</columns>
    <columns>DRE__Event__c</columns>
    <columns>DRE__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DRE__Type__c</field>
        <operation>equals</operation>
        <value>Validation</value>
    </filters>
    <label>Validation Rules</label>
</ListView>